<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivitySignUp"
    android:layout_alignParentBottom="true"
    >

    <ImageView
        android:id="@+id/imageView_Logo"
        android:layout_width="75dp"
        android:layout_height="78dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="11.25dp"
        app:srcCompat="@drawable/logo"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="151dp"
        android:layout_height="32dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="3dp"
        app:srcCompat="@drawable/logo2"
        android:importantForAccessibility="no" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="20dp"

        android:drawableEnd="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="20dp"
        android:drawableEnd="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:hint="@string/nombre_de_usuario"
        android:inputType="textPersonName"
        tools:ignore="TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="20dp"
        android:drawableEnd="@drawable/ic_baseline_password_24"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="28dp"
        android:drawableEnd="@drawable/ic_baseline_password_24"
        android:ems="10"
        android:hint="@string/confirmar_contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_RegGoogle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/login_con_google"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:icon="@drawable/logogoogle"
        app:iconGravity="start"
        app:iconPadding="-20dp"
        app:iconSize="25dip"
        app:iconTint="@null" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_SingUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="30dp"
        android:radius="20dp"
        android:background="@drawable/buttongradientcolor"
        android:text="@string/registrar" />

</LinearLayout>